--- a/package.json
+++ b/package.json
@@ -8,6 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.4.5",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
+    "@mdx-js/loader": "^1.6.22",
+    "@mdx-js/react": "^1.6.22",
+    "@next/mdx": "^11.0.0",
     "next": "11.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
